--- a/src/main/resources/templates/event/event-add.html
+++ b/src/main/resources/templates/event/event-add.html
@@ -126,6 +126,7 @@
         </div>
     </div>
 </div>
+<script th:replace="fragment::search"></script>
 
 <script>
     let tempLat = 37.45088195800781;
