--- a/src/main/resources/templates/event/event-detail.html
+++ b/src/main/resources/templates/event/event-detail.html
@@ -156,6 +156,7 @@
         </div>
     </div>
 </div>
+<script th:replace="fragment::search"></script>
 
 <script th:inline="javascript">
     let tempLat = 37.45088195800781;
