--- a/src/main/resources/templates/node/node-add.html
+++ b/src/main/resources/templates/node/node-add.html
@@ -72,6 +72,8 @@
         </div>
     </div>
 </div>
+<script th:replace="fragment::search"></script>
+
 <script>
     let rows = document.getElementsByClassName('row menu');
     let cnt = 0;
@@ -204,10 +206,6 @@
         });
     }
     window.initMap = initMap;
-
-    function add(){
-
-    }
 </script>
 </body>
 </html>
