--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -18,7 +18,7 @@
                 <div class="row mb-4 ms-5 fs-1 fontHv">
                     <div class="col-3">
                         <span>사용자 이슈</span>
-                        <span onclick="changeUp()" id="changeButton"><i class="bi bi-arrow-up-square-fill fs-2" id="button"></i></span>
+                        <span style="cursor: pointer" onclick="changeUp()" id="changeButton"><i class="bi bi-chevron-down fs-2" id="button"></i></span>
                     </div>
                 </div>
                 <div class="row text-center" id="temp">
@@ -88,8 +88,11 @@
                         </div>
                         <div class="row bg-white">
                             <div class="col-5 align-items-center">
-                                <div class="search mt-3 mb-2">
-                                    <input type="text" class="form-control form-input" placeholder="Search anything...">
+                                <div class="row mt-2">
+                                    <div class="col pe-0" style="position : relative">
+                                        <input type="text" style="border-radius: 0" class="form-control form-input" placeholder="이름 검색" id="word">
+                                        <i class="bi bi-search fs-5" style="position : absolute; top: 11%; left : 95%; cursor: pointer" onclick="searchConnect()"></i>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-3 offset-4 align-items-center text-end">
@@ -120,9 +123,9 @@
                             </table>
                         </div>
                         <div class="row mt-4">
-                            <div class="col offset-5">
+                            <div class="col">
                                 <nav aria-label="Page navigation example">
-                                    <ul class="pagination">
+                                    <ul class="pagination justify-content-center">
                                         <li class="page-item">
                                             <a class="page-link" href="#" aria-label="Previous">
                                                 <span aria-hidden="true">&laquo;</span>
@@ -146,6 +149,8 @@
             </div>
         </div>    </div>
 </div>
+<script th:replace="fragment::search"></script>
+
 <script>
     let rows = document.getElementsByClassName('row menu');
     let cnt = 0;
@@ -229,16 +234,21 @@
     });
 </script>
 <script>
-    function changeUp(){
+    function changeUp() {
         document.getElementById("temp").style.display = 'none';
-        document.getElementById("button").className = "bi bi-arrow-down-square-fill fs-2";
+        document.getElementById("button").className = "bi bi-chevron-up fs-2";
         document.getElementById("changeButton").onclick = changeDown;
     }
 
-    function changeDown(){
+    function changeDown() {
         document.getElementById("temp").style.display = 'flex';
-        document.getElementById("button").className = "bi bi-arrow-up-square-fill fs-2";
+        document.getElementById("button").className = "bi bi-chevron-down fs-2";
         document.getElementById("changeButton").onclick = changeUp;
+    }
+
+    function searchConnect(){
+        let wordBox = document.getElementById("word");
+        window.self.location.href = 'http://localhost:60002/admin/node/search/' + wordBox.value;
     }
 </script>
 </body>
