--- a/src/main/resources/templates/line/line-add.html
+++ b/src/main/resources/templates/line/line-add.html
@@ -66,6 +66,8 @@
         </div>
     </div>
 </div>
+<script th:replace="fragment::search"></script>
+
 <script>
     let rows = document.getElementsByClassName('row menu');
     let cnt = 0;
