--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -380,6 +380,8 @@
         </div>
     </div>
 </div>
+<script th:replace="fragment::search"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
     const ctx1 = document.getElementById('myChart1');
